--- a/index.html
+++ b/index.html
@@ -1,8 +1,187 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Md. Minhaz Ul Karim</title>
-	</head>
-	<body>
-		<center><h2>Minhaz</h2></center>
-	</body>
+    <head>
+		<link rel="shortcut icon" href="./images/m.png"; /> 
+        <title>Minhaz Ul Karim</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    </head>
+    <body>
+        <div class="container-fluid">
+            <div class="row">
+				<div class="col-sm-10 col-sm-offset-1">
+				<div class="navbar  navbar-static-top">
+                    <div class="navbar-header">
+                        <a href="http://mmukarim.github.io" class="navbar-brand"><p class="name">MINHAZ UL KARIM</p></a>
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".minhaz" >
+                            <span class="sr-only">Toggle</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="navbar-collapse collapse minhaz">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#">Home</a></li>
+                            <li ><a href="#services">Services</a></li>
+                            <li ><a href="#portfolio">Portfolio</a></li>
+                            <li ><a href="#a_me">About Me</a></li>
+                            <li ><a href="#c_me">Contact Me</a></li>
+                            <li ><a href="https://facebook.com/mmukarim" target="_blank"><img src="images/fb.png" alt="FB" class="img-responsive"></a></li>
+                            <li ><a href="https://twitter.com/mmukarim" target="_blank"><img src="images/tw.jpg" alt="TW" class="img-responsive"></a></li>
+                            <li ><a href="https://plus.google.com/u/0/+MdMinhazUlKarim/" target="_blank"><img src="images/gp.png" alt="G+" class="img-responsive"></a></li>
+                        </ul>
+                    </div>
+				</div>	
+				</div>
+				<br><br>
+				<div class="col-sm-12"> 
+					<div id="m_slide" class="carousel" data-ride="carousel">
+						<ul class="carousel-indicators">
+							<li data-target="#m_slide" data-slide-to="0" class="active" ></li>
+							<li data-target="#m_slide" data-slide-to="1" ></li>
+							<li data-target="#m_slide" data-slide-to="2" ></li>
+						</ul>
+						<div class="carousel-inner" role="listbox">
+							<div class="item active" role="presentation">
+								<img src="images/s1.jpg" class="img-responsive" alt="Search Engine Optimization">
+							</div>
+							<div class="item" role="presentation">
+								<img src="images/s2.jpg" class="img-responsive" alt="Search Engine Optimization">
+							</div>
+							<div class="item" role="presentation">
+								<img src="images/s3.jpg" class="img-responsive" alt="Search Engine Optimization">
+							</div>
+						</div>
+						<a href="#m_slide" class="left carousel-control" data-slide="prev"> 
+							<span class="glyphicon glyphicon-chevron-left"></span>
+							<span class="sr-only">previous</span>
+						</a>
+						<a href="#m_slide" class="right carousel-control"data-slide="next"> 
+							<span class="glyphicon glyphicon-chevron-right"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
+                </div>
+				<div class="col-sm-12 eee">
+				<div class="col-sm-8 col-sm-offset-2" id="services">
+					<h2 class="text-center text-info">My Services</h2>
+					<div class="col-sm-4">
+						<div class="thumbnail service">
+							<div class="caption">
+								<h4>Web Design</h4>
+								<p>Fully responsive and unique website design for your company or personal use.</p>
+							</div>
+							<img src="images/webdes.jpg" alt="Web Design" class="img-responsive">
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="thumbnail service">
+							<div class="caption">
+								<h4>Web Development</h4>
+								<p>Ecommerce website development. Wordpress, Joomla and any other CMS sites.</p>
+							</div>
+							<img src="images/webdev.jpg" alt="Web Development" class="img-responsive">
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="thumbnail service">
+							<div class="caption">
+								<h4>Database Management</h4>
+								<p>Database design, administration and management of your website.</p>
+							</div>
+							<img src="images/mysql.jpg" alt="MySQL" class="img-responsive">
+						</div>
+					</div>
+				</div>
+				</div>
+				<div class="col-sm-8 col-sm-offset-2">
+					<div class="col-sm-8" id="a_me">
+						<h2 class="text-info">About Me</h2>
+						<p>This is Minhaz Ul Karim. I am a web application developer as well as a website designer.
+							I am here waiting to build a fully responsive website for you. I have skills on HTML5, 
+							CSS3, Bootstrap, Javascript, PHP, MySQL.</p>
+					</div>
+					<div class="col-sm-4">
+						<h2 class="text-info">My Expertise</h2>
+						<ul>
+							<li>HTML5: 95%</li>
+							<li>CSS3: 90%</li>
+							<li>Bootstrap: 99%</li>
+							<li>Javascript: 99%</li>
+							<li>PHP: 85%</li>
+							<li>MySQL: 95%</li>
+						</ul>
+					</div>
+				</div>
+						<div class="col-sm-12 eee"><div class="col-sm-8 col-sm-offset-2">
+							<div class="col-sm-4">
+								<h4 class="text-info">My Services</h4>
+								<ul class="padd">
+									<li>Website Design</li>
+									<li>Responsive Website Desing</li>
+									<li>Web Development</li>
+									<li>Database Management</li>
+								</ul>
+							</div>
+							<div class="col-sm-4">
+								<h4 class="text-info" id="c_me">Contact Me</h4>
+								<form>
+									<div class="form-group">
+										<label for="name">Name:</label> 
+										<input name="name" class="form-control" id="name" type="text"/> 
+									</div>
+
+									<div class="form-group">
+										<label for="email">Email:</label> 
+										<input name="email" class="form-control"  type="email" id ="myemail"/>
+										<span id="email_strength"></span>
+									</div>
+									<div class="form-group">
+										<label for="message">Message:</label> 
+										<textarea name="message" class="form-control" id="message"></textarea>
+									</div>
+									<input type="submit" class="btn btn-info">
+								</form>
+							</div>
+							<div class="col-sm-4">
+								<h4 class="text-info">Why Me</h4>
+								<ul class="padd">
+									<li>Unique Design</li>
+									<li>Fuly Responsive</li>
+									<li>Deliver In Time</li>
+								</ul>
+							</div>
+						</div></div>
+						<div class="col-sm-12 text-center" style="background: white;">
+							<div class="col-sm-8 col-sm-offset-2 footer">
+								<code><a href="#">Home</a></code>
+								<code><a href="#services">Services</a></code>
+								<code><a href="#portfolio">Portfolio</a></code>
+								<code><a href="#a_me">About Me</a></code>
+								<code><a href="#c_me">Contact Me</a></code>
+							</div>
+							<div class="col-sm-8 col-sm-offset-2">
+								<code>&COPY; 2015 | All rights Reserved by <a href="http://mmukarim.github.io">Minhaz Ul Karim</a></code>
+							</div>
+						</div>
+					</div>
+				</div>
+            </div>
+        </div>
+
+
+
+        <script src="js/jquery-1.11.3.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/project.js"></script>
+    </body>
 </html>
