--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<link rel="shortcut icon" href="images/ml.png"; /> 
+		<link rel="shortcut icon" href="images/m.ico"; /> 
         <title>Minhaz Ul Karim</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -106,7 +106,7 @@
 				<div class="col-sm-8 col-sm-offset-2">
 					<div class="col-sm-8" id="a_me">
 						<h2 class="text-info">About Me</h2>
-						<p>This is Minhaz Ul Karim. I am a web application developer as well as a website designer.
+						<p><img src="./images/about.jpg" alt="About Me" class ="about_img">This is Minhaz Ul Karim. I am a web application developer as well as a website designer.
 							I am here waiting to build a fully responsive website for you. I have skills on HTML5, 
 							CSS3, Bootstrap, Javascript, PHP, MySQL.</p>
 					</div>
